--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=5000
+spring.data.mongodb.uri=mongodb+srv://guest_admin:7IRq1YYzX5zRAjZe@library.pnk2h.mongodb.net/<dbname>?retryWrites=true&w=majority
+spring.data.mongodb.database=management
+jwt.secret=javainuse
