--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5000
-spring.data.mongodb.uri=mongodb+srv://guest_admin:7IRq1YYzX5zRAjZe@library.pnk2h.mongodb.net/<dbname>?retryWrites=true&w=majority
-spring.data.mongodb.database=management
+spring.data.mongodb.uri=mongodb+srv://<username>:<password>@cluster0-nomfh.mongodb.net
+spring.data.mongodb.database=<Database>
 
 # Security #
 # The secret key is combined with the header and the payload to create a unique hash.
