--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.data.mongodb.database=<Database>
 # Security #
 # The secret key is combined with the header and the payload to create a unique hash.
 # We are only able to verify this hash if you have the secret key.
-jwt.secret=javainuse
+jwt.secret=ThisIsASecretKey
