--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+# SERVER
 server.port=5000
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@cluster0-nomfh.mongodb.net
-spring.data.mongodb.database=<Database>
 
-# Security #
-# The secret key is combined with the header and the payload to create a unique hash.
-# We are only able to verify this hash if you have the secret key.
-jwt.secret=ThisIsASecretKey
+# DATABASE
+spring.data.mongodb.uri=mongodb+srv://guest_admin:7IRq1YYzX5zRAjZe@library.pnk2h.mongodb.net/<dbname>?retryWrites=true&w=majority
+spring.data.mongodb.database=management
+
+# LOGGING
+logging.level.org.springframework.web: DEBUG
