--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.port=5000
 spring.data.mongodb.uri=mongodb+srv://<username>:<password>@cluster0-nomfh.mongodb.net
 spring.data.mongodb.database=<Database>
 
-# LOGGING
+# LOGGING LEVEL
 logging.level.org.springframework.web: DEBUG
